manifests/base/emp-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-emp-api-deployment
spec:
  selector:
    matchLabels:
      app: k8s-demo-emp-api
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-demo-emp-api
    spec:
      containers:
      - name: k8s-demo-emp-api
        image: juggernaut/k8s-demo-emp-api:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9090
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
          - name: "dbparams"
            mountPath: "/dbparams"
            readOnly: true
        ports:
        - containerPort: 9090
      volumes:
        - name: "dbparams"
          configMap:
            name: "dbparams"
