manifests/base/emp-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-emp-api-svc
spec:
  type: NodePort
  selector:
    app: k8s-demo-emp-api
  ports:
    - port: 9090
